// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prop icon 1`] = `
<div>
  <div
    class="nut-cell nut-cell--clickable "
    style="border-radius: 6px;"
    to=""
  >
    <div
      class="nut-cell__icon"
    >
      <i
        class="nutui-iconfont nut-icon nut-icon-my icon"
      />
    </div>
    <div
      class="nut-cell__title"
    >
      <div
        class="nut-cell__maintitle"
      >
        姓名
      </div>
    </div>
    <div
      class="nut-cell__value"
      style="text-align: right;"
    >
      张三
    </div>
    <i
      class="nutui-iconfont nut-icon nut-icon-right nut-cell__link"
    />
  </div>
</div>
`;

exports[`prop isLink 1`] = `
<div>
  <div
    class="nut-cell nut-cell--clickable "
    style="border-radius: 6px;"
    to=""
  >
    <div
      class="nut-cell__title"
    >
      <div
        class="nut-cell__maintitle"
      >
        URL 跳转
      </div>
    </div>
    <div
      class="nut-cell__value"
      style="text-align: right;"
    >
      https://m.jd.com/
    </div>
    <svg
      aria-labelledby=""
      class="nut-cell__link nut-icon"
      role="presentation"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M381.262 1005.566c-16.132 21.51-45.708 24.198-67.217 8.066-21.51-16.132-24.198-45.708-8.066-67.217C413.526 806.604 518.384 666.792 625.932 529.67c8.066-10.755 8.066-24.198 0-34.953C518.384 354.906 413.526 215.094 305.979 77.972c-16.132-21.51-10.755-51.085 8.066-67.217C335.555-5.377 365.13 0 381.262 18.82c107.547 142.5 212.405 282.311 319.953 419.434 34.952 43.019 34.952 104.858 0 150.566-107.548 139.811-212.406 279.622-319.953 416.745"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
  </div>
</div>
`;

exports[`prop title description subtitle test 1`] = `
<div>
  <div
    class="nut-cell "
    data-testid="prop"
    style="border-radius: 6px;"
    to=""
  >
    <div
      class="nut-cell__title"
    >
      <div
        class="nut-cell__maintitle"
      >
        我是标题
      </div>
      <div
        class="nut-cell__subtitle"
      >
        副标题描述
      </div>
    </div>
    <div
      class="nut-cell__value"
      style="text-align: right;"
    >
      描述文字
    </div>
  </div>
</div>
`;

exports[`slot default test 1`] = `
<div>
  <div
    class="nut-cell "
    style="border-radius: 6px;"
    to=""
  >
    <div>
      自定义内容
    </div>
  </div>
</div>
`;

exports[`slot linkSlot 1`] = `
<div>
  <div
    class="nut-cell "
    style="border-radius: 6px;"
    to=""
  >
    <div
      class="nut-cell__title"
    >
      <div
        class="nut-cell__maintitle"
      >
        Switch
      </div>
    </div>
    <div
      class="nut-switch switch-open  nut-switch-base "
    >
      <div
        class="switch-button"
      />
    </div>
  </div>
</div>
`;
